--- a/css/sobre.css
+++ b/css/sobre.css
@@ -16,3 +16,18 @@ figure {
     background-color: whitesmoke;
     border: 1px solid lightgrey;
 }
+
+.matriz-musicdot {
+    width: 550px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.familia-tupfeln {
+    width: 275px;
+    float: right;
+}
+
+figure img {
+    width: 100%;
+}
