--- a/css/sobre.css
+++ b/css/sobre.css
@@ -33,3 +33,12 @@ figure {
 figure img {
     width: 100%;
 }
+
+.contato__subtitulo {
+    display: inline;
+}
+
+.contato__info {
+    margin: 16px 0 24px;
+    padding-left: 32px;
+}
