--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,5 +1,6 @@
 body {
-    width: 940px;
+    width: 80%;
+    max-width: 940px;
     margin-left: auto;
     margin-right: auto;
 
@@ -21,6 +22,8 @@ body {
 }
         
 figure {
+    max-width: 100%;
+    box-sizing: border-box;
     text-align: center;   
     background-color: whitesmoke;
     border: 1px solid lightgrey;
