--- a/css/rodape.css
+++ b/css/rodape.css
@@ -1,5 +1,7 @@
 .rodape {
-    padding: 2em 5%;
+    padding-top: 2em;
+    padding-bottom: 2em;
+
     text-align: center;
     font-size: 0.7rem;
 }
