--- a/css/cabecalho.css
+++ b/css/cabecalho.css
@@ -1,15 +1,11 @@
 .cabecalho {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    box-sizing: border-box;
-
     text-align: center;
     font-size: 0.6rem;
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 0.23em;
     color: #fff;
+    background-color: #2D5377;
 }
 
 .cabecalho__logo {
@@ -36,8 +32,7 @@
 
 @media (min-width: 640px) {
     .cabecalho {
-    padding-top: 0;
-    padding-bottom: 0;
+    padding: 0 5%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -63,5 +58,12 @@
 
     .cabecalho__item-menu--matricular a {
         padding: 1.8em 3.5em;
+    }
+}
+
+@media (min-width: 1066px) {
+    .cabecalho {
+        padding-left: calc((100% - 960px) / 2);
+        padding-right: calc((100% - 960px) / 2);
     }
 }
