--- a/css/rodape.css
+++ b/css/rodape.css
@@ -1,7 +1,5 @@
 .rodape {
-    padding-top: 2em;
-    padding-bottom: 2em;
-
+    padding: 2em 5%;
     text-align: center;
     font-size: 0.7rem;
 }
@@ -53,12 +51,12 @@ margin: 0 .25em;
 
 
 @media (max-width: 640px) {
-    .rodape__secao  .rodape__secao {
+    .rodape__secao + .rodape__secao {
         margin-top: 2em;
     }
 }
 
-@media(min-width: 640px) and (max-width: 1200px) {
+@media(min-width: 640px) {
     .rodape {
         display: flex;
         flex-wrap: wrap;
@@ -91,31 +89,5 @@ margin: 0 .25em;
     .rodape__secao--newsletter {
         order: 4;
         margin-top: 2em;
-    }
-}
-
-@media(min-width: 1200px) {
-    .rodape {
-        display: flex;
-        justify-content: space-between;
-        font-size: 0.85rem;
-        
-        text-align: left;
-    }
-    
-    .rodape__titulo {
-        font-size: 1em;
-    }
-    
-    .rodape__lista-midias-sociais {
-        justify-content: left;
-    }
-    
-    .rodape__secao {
-        margin-top: 0;
-    }
-    
-    .rodape__secao + .rodape__secao {
-        margin-left: 2em;
     }
 }
