--- a/css/planos.css
+++ b/css/planos.css
@@ -54,13 +54,13 @@
  margin: 8px 0;
 }
 
-.planos__card p  p {
+.planos__card p + p {
  font-weight: 300;
  margin-top: .2rem;
  letter-spacing: 1.5px;
 }
 
-.plano__titulo, .plano__titulo  p {
+.plano__titulo, .plano__titulo + p {
  font-size: 1rem;
  font-weight: 500;
 }
@@ -106,7 +106,7 @@
  z-index: 1;
 }
 
-.card--anual p  p, .card--semestral p  p {
+.card--anual p + p, .card--semestral p + p {
  margin-bottom: 1rem;
 }
 
@@ -167,7 +167,7 @@
      width: 2.5rem;
      }
     
-     .plano__titulo, .plano__titulo  p {
+     .plano__titulo, .plano__titulo + p {
      font-size: 1.4rem;
      font-weight: 500;
      }
